--- a/app/assets/css/send.sass
+++ b/app/assets/css/send.sass
@@ -1,8 +1,18 @@
 .send
-  position: relative
+  position: absolute
+  width: calc(100% - 235px)
+  left: 20px
+  bottom: 1em
+  color: #ccc
+  font-family: 'Open Sans'
+  font-weight: 300
+  textarea
+    background: #303030
+    border-radius: 15px
+    border: none
 
 .send__text
-  display: block
+  display: inline-block
   width: 100%
   padding: 5px 20px
   box-sizing: border-box
