--- a/app/assets/css/channel-info.sass
+++ b/app/assets/css/channel-info.sass
@@ -1,16 +1,18 @@
 .channel-info
-  padding: 20px 15px
+  padding: 20px 0
 
 .channel-info__heading
   font-family: 'Open Sans', sans-serif
   font-size: 1.2em
   margin: 5px 0
+  padding: 0 15px
 
 .channel-info__decs
-  border: 1px dotted grey
   font-size: 14px
   font-family: 'Open Sans', sans-serif
-  padding: 5px 10px
-  color: #6a656c
-  border-radius: 10px/8px
+  padding: 5px 15px
   margin: 10px 0
+  color: gray
+
+.list_channelUsers
+  padding: 0 15px !important
