--- a/app/assets/css/common.sass
+++ b/app/assets/css/common.sass
@@ -11,8 +11,8 @@ body
 .layout
   height: 100%
   min-height: 400px
-  min-width: 800px
   position: relative
+  overflow-x: hidden
 
 .hidden
   display: none
