--- a/app/assets/css/more.sass
+++ b/app/assets/css/more.sass
@@ -1,39 +1,14 @@
 .more
-  margin: 15px 0 0 0
-  padding: 0 30px
   user-select: none
-
-  &:hover
-    background: transparent
-  &:before
-    content: ""
-    position: absolute
-    right: -10px
-    border-width: 12px 10px
-    border-color: transparent #2c2c2c transparent transparent
-    border-style: solid
-    display: none
-
-.more > span
-  border-bottom: 1px dotted rgba(255,255,255,0.2)
-  font-size: 14px
-  padding-bottom: 2px
-  opacity: .5
+  display: block
   cursor: pointer
-
+  text-align: center
+  font-size: 1.2em
+  transition: .2s ease-in-out
   &:hover
-    opacity: 1
+    opacity: .6
 
-.more_userschannel
-  padding: 0 10px
-
-  & > span
-    border-color: #242424
-
-
-.active_list + .drop-box
-  visibility: visible
-
-.active_list
-  &:before
-    display: block
+#showAllChannels:checked~.more>span:before
+  position: relative
+  top: 5px
+  content: '\f0de'
