--- a/app/assets/css/msg.sass
+++ b/app/assets/css/msg.sass
@@ -4,6 +4,8 @@
   position: relative
   flex-direction: column
   justify-content: flex-end
+  background: #171b1a
+  color: #e5e7e6
 
 .msg__wrap
   position: relative
@@ -19,7 +21,6 @@
   z-index: 1
   font-size: 3em
   left: 0
-  color: #fff
   i
     position: absolute
     bottom: 1.5em
@@ -28,19 +29,21 @@
 .msg__load_more
   width: 100%
   height: 60px
-  background: #fefefe
   text-align: center
   line-height: 60px
   cursor: pointer
   margin: 0 0 20px 0
+  transition: all .2s ease-in-out
   &:hover
-    background: #fcfcfc
+    background: rgba(255,255,255,.1)
   &.hidden
     display: none
 
 .msg__list
-  height: 100%
+  height: 90%
   overflow-y: auto
+  position: relative
+  padding-right: 20px
   width: calc(100% - 200px)
 
 .msg__body
@@ -50,8 +53,10 @@
   right: 0
 
 .msg__item
-  padding: 5px 20px
+  padding: 15px 20px 5px 20px
   font-size: 15px
+  font-family: 'Open Sans'
+  overflow-x: hidden
 
   &:after
     content: ''
@@ -64,10 +69,27 @@
 .msg__author
   float: left
   margin-right: 5px
-  font-weight: bolder
+  color: gray
+  margin-top: 10px
+
+.msg__avatar
+  display: inline-block
+  float: left
+  width: 60px
+  height: 60px
+  margin-right: .5em
+  overflow: hidden
+  border-radius: 50%
+  img
+    width: 100%
+    height: 100%
 
 .msg__text
-  display: block
+  display: inline-block
+  margin-top: 10px
+  padding: 5px
+  border-radius: 5px
+  font-weight: 300
   overflow: hidden
 
   p
@@ -110,8 +132,8 @@
 .msg__users-wrap
   height: 100%
   overflow-y: auto
+  overflow-x: hidden
 
 .msg__date
-  color: grey
-  float: right
-  margin-left: 10px
+  color: darken(grey,20%)
+  font-size: 12px
