--- a/app/assets/css/profile.sass
+++ b/app/assets/css/profile.sass
@@ -3,16 +3,28 @@
   justify-content: flex-end
   align-items: center
   position: relative
-  height: 60px
-  background: #EAE7E3
-  color: #3C3C3C
-  box-shadow: 0 1px 5px rgba(0,0,0,.3)
+  height: 70px
+  background: #171b1a
+  color: #878988
   padding: 0 30px 0 0
   z-index: 9
+  font-family: Open Sans
+  &:before
+    content: ''
+    display: block
+    position: absolute
+    height: 2px
+    background: lighten(#363636,10%)
+    left: 0
+    right: 0
+    bottom: 0
 
 .profile__tools
   margin: 0 25px
   cursor: pointer
+
+.profile__name
+  color: #fff
 
 .profile__out
   cursor: pointer
@@ -31,4 +43,4 @@
     max-width: 100%
 
 .profile__name
-  margin: 0 25px
+  margin: 0 0 0 20px
