--- a/app/assets/css/search.sass
+++ b/app/assets/css/search.sass
@@ -33,3 +33,15 @@
       margin: 20px 0 5px
     img
       display: none
+
+.search__form
+  .form__label
+    background: none
+    border-radius: 15px 0 0 15px
+    border-color: lighten(#303030,5%)
+  .form__text
+    border-radius: 0 15px 15px 0
+    background: #303030
+    border-color: lighten(#303030,5%)
+  i
+    color: #878988
