--- a/app/assets/css/button.sass
+++ b/app/assets/css/button.sass
@@ -1,17 +1,26 @@
 .btn
   color: #fff
-  background-color: #337ab7
   padding: 6px 16px
   margin-bottom: 0
-  font-size: 14px
-  font-weight: 400
+  font-size: 1.2em
+  font-weight: 300
   line-height: 1.42857143
   text-align: center
   white-space: nowrap
-  border: 1px solid transparent
+  border: none
   border-radius: 4px
   cursor: pointer
-
+  transition: background .3s ease-in-out
   &:hover
-    background-color: #286090
-    border-color: #204d74
+    opacity: .6
+
+.auth__btn
+  text-align: center
+  border-radius: 4px
+  position: relative
+  font-size: 1.2em
+  padding: 6px 16px
+  margin-bottom: 10px
+  transition: background .3s ease-in-out
+  &:hover
+    opacity: .6
