--- a/app/assets/css/channel-info.sass
+++ b/app/assets/css/channel-info.sass
@@ -16,3 +16,10 @@
 
 .list_channelUsers
   padding: 0 15px !important
+
+.channel__image
+  border-radius: 5px
+  background:
+    image: url(https://i.imgur.com/sll3ex8.png)
+    repeat: no-repeat
+    size: cover
