--- a/app/assets/css/0_queries.sass
+++ b/app/assets/css/0_queries.sass
@@ -24,7 +24,7 @@
 @media only screen and (max-width: 810px)
   // nav
   .nav
-    max-width: 210px
+    max-width: 240px
 
   // msg users
   .msg__users
@@ -45,3 +45,8 @@
   // msg list
   .msg__list
     height: 88% !important
+
+  // close
+  .close-button
+    width: 70px !important
+    height: 70px !important
