--- a/app/assets/css/login.sass
+++ b/app/assets/css/login.sass
@@ -1,23 +1,21 @@
 .login__box
-  h2
-    font-family: Open Sans, sans-serif
-    font-weight: 600
-    margin: 0
   a
     text-decoration: none
-    color: #337ab7
-    display: inline-block
-    margin-right: 10px
+    color: #fff
+    display: block
     &:hover
       opacity: .6
     .fa
-      font-size: 2em
+      position: relative
+      top: .1em
+      margin-left: .5em
+      font-size: 1.5em
+  .btn
+    width: 100%
 
 .login__error
-  font-size: 12px
-  margin: 0
-  position: absolute
+  font-size: .9em
+  margin-bottom: 20px
   font-family: 'Open Sans'
-  bottom: 115px
   color: darkred
-  font-weight: 600
+  font-weight: 300
