--- a/app/assets/css/msg.sass
+++ b/app/assets/css/msg.sass
@@ -7,6 +7,9 @@
   background: #171b1a
   color: #e5e7e6
 
+  canvas
+    max-height: 790px
+
 .msg__wrap
   position: relative
   flex-grow: 1
@@ -23,8 +26,8 @@
   left: 0
   i
     position: absolute
-    bottom: 1.5em
-    left: .5em
+    bottom: 2.1em
+    left: .55em
 
 .msg__load_more
   width: 100%
@@ -63,9 +66,6 @@
     clear: both
     display: table
 
-  &.msg__searched
-    background-color: #fadc58
-
 .msg__author
   float: left
   margin-right: 5px
@@ -91,6 +91,9 @@
   border-radius: 5px
   font-weight: 300
   overflow: hidden
+
+  a
+    color: #fff
 
   p
     margin: 0
