--- a/app/assets/css/setting.sass
+++ b/app/assets/css/setting.sass
@@ -4,8 +4,22 @@
 
   .form__radio + label
     font-size: 1rem
-    margin-left: 10px
+    margin-right: 10px
 
-  .form__radio:checked + label.btn
-    background-color: #286090
-    border-color: #204d74
+.setting__image
+  width: 120px
+  height: 120px
+  position: relative
+  margin: -30px auto 0 auto
+  text-align: center
+  margin-bottom: 1em
+  img
+    width: 100%
+    height: 100%
+    border-radius: 50%
+  span
+    display: block
+    text-align: center
+    width: 100%
+    color: #fff
+    position: absolute
