--- a/app/views/layouts/index.html
+++ b/app/views/layouts/index.html
@@ -20,6 +20,7 @@
     <!-- endbuild -->
   </head>
   <body>
+    <div id="container"></div>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="vendor/jquery-1.11.2.min.js"><\/script>')</script>
     <!-- build:js js/vendor.min.js -->
