gender-statuses-improvements

--- a/app/assets/css/list.sass
+++ b/app/assets/css/list.sass
@@ -101,6 +101,7 @@ $list-item-height: 70px
 .user__image
   width: 60px
   height: 60px
+  position: relative
   img
     border-radius: 50%
     width: 100%
