--- a/app/assets/css/setting.sass
+++ b/app/assets/css/setting.sass
@@ -2,6 +2,9 @@
   .form__radio
     display: none
 
+  .form__row
+    color: #fff
+
   .form__radio + label
     font-size: 1rem
     margin-right: 10px
@@ -23,3 +26,8 @@
     width: 100%
     color: #fff
     position: absolute
+
+.theme-icon
+  font-family: 'Open Sans', sans-serif
+  font-weight: 300
+  font-size: .9em
