--- a/app/assets/css/channel-info.sass
+++ b/app/assets/css/channel-info.sass
@@ -20,6 +20,6 @@
 .channel__image
   border-radius: 5px
   background:
-    image: url(https://i.imgur.com/sll3ex8.png)
+    image: url(http://i.imgur.com/pxHL2xi.png)
     repeat: no-repeat
     size: cover
